--- a/_includes/critical-calc-body.html
+++ b/_includes/critical-calc-body.html
@@ -56,7 +56,7 @@
 <div class="main-wrapper">
     <!-- 네비게이션 경로 -->
     <div class="navigation-path">
-        <script>document.write(`<a href="../../?v=${APP_VERSION}" id="nav-home">-</a>`);</script>
+        <script>document.write(`<a href="../../" id="nav-home">-</a>`);</script>
         <span class="separator">/</span>
         <span class="current-page" id="navCurrent">-</span>
     </div>
