--- a/_includes/gallery-body.html
+++ b/_includes/gallery-body.html
@@ -51,7 +51,7 @@
 <div class="main-wrapper">
   <div class="gallery-header">
     <div class="navigation-path">
-      <script>document.write(`<a href="${BASE_URL}/?v=${APP_VERSION}" id="nav-home" data-i18n="navHome">-</a>`);</script>
+      <script>document.write(`<a href="${BASE_URL}/" id="nav-home" data-i18n="navHome">-</a>`);</script>
       <span class="separator">/</span>
       <span class="current-page" id="nav-current" data-i18n="navCurrent">-</span>
     </div>
