--- a/_includes/material-calc-body.html
+++ b/_includes/material-calc-body.html
@@ -54,7 +54,7 @@
 
 <div class="main-wrapper">
     <div class="navigation-path">
-        <script>document.write(`<a href="${BASE_URL}/?v=${APP_VERSION}"><span data-i18n="navHome">-</span></a>`);</script>
+        <script>document.write(`<a href="${BASE_URL}/"><span data-i18n="navHome">-</span></a>`);</script>
         <span class="separator">/</span>
         <span class="current-page" data-i18n="navCurrent">-</span>
     </div>
