--- a/_includes/persona-body.html
+++ b/_includes/persona-body.html
@@ -100,7 +100,7 @@
     <script src="{{ site.baseurl }}/apps/persona/getfrom.js?v={{ site.time | date: '%s' }}"></script>
 
     <div class="navigation-path">
-        <script>document.write(`<a href="../../?v=${APP_VERSION}" id="nav-home" data-i18n="navHome">-</a>`);</script>
+        <script>document.write(`<a href="../../" id="nav-home" data-i18n="navHome">-</a>`);</script>
         <span class="separator">/</span>
         <span class="current-page" id="nav-current" data-i18n="navCurrent">-</span>
     </div>
