--- a/_includes/pull-tracker-body.html
+++ b/_includes/pull-tracker-body.html
@@ -51,7 +51,7 @@
 
 <div class="main-wrapper">
     <div class="navigation-path">
-        <script>document.write(`<a href="../../?v=${APP_VERSION}" id="navhome">홈</a>`);</script>
+        <script>document.write(`<a href="../../" id="navhome">홈</a>`);</script>
         <span class="separator">/</span>
         <span class="current-page" id="navCurrent">Pull Tracker</span>
     </div>
