--- a/_includes/pull-tracker-global-stats-body.html
+++ b/_includes/pull-tracker-global-stats-body.html
@@ -51,7 +51,7 @@
 
 <div class="main-wrapper">
   <div class="navigation-path">
-    <script>document.write(`<a href="${BASE_URL}/?v=${APP_VERSION}"><span data-lang-key="home" id="navhome">홈</span></a>`);</script>
+    <script>document.write(`<a href="${BASE_URL}/"><span data-lang-key="home" id="navhome">홈</span></a>`);</script>
     <span class="separator">/</span>
     <span class="current-page" id="navCurrent">Global Stats</span>
   </div>
