--- a/_includes/pull-tracker-url-guide-body.html
+++ b/_includes/pull-tracker-url-guide-body.html
@@ -49,7 +49,7 @@
 
 <div class="main-wrapper guide-page">
   <div class="navigation-path">
-    <script>document.write(`<a href="${BASE_URL}/?v=${APP_VERSION}" id="navhome"><span data-lang-key="home">Home</span></a>`);</script>
+    <script>document.write(`<a href="${BASE_URL}/" id="navhome"><span data-lang-key="home">Home</span></a>`);</script>
     <span class="separator">/</span>
     <a href="../"><span id="navBack">Pull Tracker</span></a>
     <span class="separator">/</span>
