--- a/_includes/tactic-body.html
+++ b/_includes/tactic-body.html
@@ -65,7 +65,7 @@
     <div class="main-wrapper">
       <!-- navigation path -->
       <div class="navigation-path">
-        <script>document.write(`<a href="../../?v=${APP_VERSION}">홈</a>`);</script>
+        <script>document.write(`<a href="../../">홈</a>`);</script>
         <span class="separator">/</span>
         <span class="current-page">택틱 / 택틱 메이커</span>
     </div>
