--- a/_includes/tactic-maker-body.html
+++ b/_includes/tactic-maker-body.html
@@ -70,7 +70,7 @@
     </div>
 
     <div class="navigation-path">
-        <script>document.write(`<a href="../../?v=${APP_VERSION}" data-i18n="home">-</a>`);</script>
+        <script>document.write(`<a href="../../" data-i18n="home">-</a>`);</script>
         <span class="separator">/</span>
         <span class="current-page" data-i18n="navPath">-</span>
     </div>
