--- a/_includes/tactic-upload-body.html
+++ b/_includes/tactic-upload-body.html
@@ -55,7 +55,7 @@
 <div class="main-wrapper">
     <!-- 네비게이션 경로 -->
     <div class="navigation-path">
-        <script>document.write(`<a id="nav-home" href="../../?v=${APP_VERSION}">홈</a>`);</script>
+        <script>document.write(`<a id="nav-home" href="../../">홈</a>`);</script>
         <span class="separator">/</span>
         <span class="current-page" id="nav-current">택틱 / 택틱 업로드</span>
     </div>
