--- a/_includes/defense-calc-body.html
+++ b/_includes/defense-calc-body.html
@@ -64,7 +64,7 @@
 <div class="main-wrapper">
     <!-- navigation path -->
     <div class="navigation-path">
-        <script>document.write(`<a href="../../?v=${APP_VERSION}" id="nav-home">-</a>`);</script>
+        <script>document.write(`<a href="../../" id="nav-home">-</a>`);</script>
         <span class="separator">/</span>
         <span class="current-page" id="nav-current">-</span>
     </div>
