--- a/_includes/pull-calc-body.html
+++ b/_includes/pull-calc-body.html
@@ -59,7 +59,7 @@
 <div class="main-wrapper pull-calc-page">
     <!-- Navigation Path -->
     <div class="navigation-path">
-        <script>document.write(`<a href="../../?v=${APP_VERSION}" id="nav-home">-</a>`);</script>
+        <script>document.write(`<a href="../../" id="nav-home">-</a>`);</script>
         <span class="separator">/</span>
         <span class="current-page" id="nav-current">-</span>
     </div>
