--- a/_includes/revelations-body.html
+++ b/_includes/revelations-body.html
@@ -56,7 +56,7 @@
 
     <!-- Navigation path -->
     <div class="navigation-path">
-        <script>document.write(`<a href="../../?v=${APP_VERSION}" id="nav-home" data-i18n="nav_home">-</a>`);</script>
+        <script>document.write(`<a href="../../" id="nav-home" data-i18n="nav_home">-</a>`);</script>
         <span class="separator">/</span>
         <span class="current-page" id="nav-current" data-i18n="nav_current">-</span>
     </div>
