--- a/_includes/tactics-body.html
+++ b/_includes/tactics-body.html
@@ -55,7 +55,7 @@
 <div class="main-wrapper">
     <!-- 네비게이션 경로 -->
     <div class="navigation-path">
-        <script>document.write(`<a id="nav-home" data-i18n="nav_home" href="../../?v=${APP_VERSION}">-</a>`);</script>
+        <script>document.write(`<a id="nav-home" data-i18n="nav_home" href="../../">-</a>`);</script>
         <span class="separator">/</span>
         <span class="current-page" id="nav-current" data-i18n="nav_current">-</span>
     </div>
