--- a/_includes/guides-body.html
+++ b/_includes/guides-body.html
@@ -54,7 +54,7 @@
 <div class="main-wrapper">
     <!-- navigation path -->
     <div class="navigation-path">
-        <script>document.write(`<a href="/" id="nav-home" data-i18n="navHome">-</a>`);</script>
+        <script>document.write(`<a href="/" id="nav-home" data-i18n="nav.home">-</a>`);</script>
         <span class="separator">/</span>
         <span class="current-page" id="nav-current" data-i18n="navCurrent">-</span>
     </div>
