--- a/_includes/synergy-body.html
+++ b/_includes/synergy-body.html
@@ -16,7 +16,7 @@
     <script defer src="{{ site.baseurl }}/i18n/service/i18n-adapter.js?v={{ site.time | date: '%s' }}"></script>
 
     <div class="navigation-path">
-        <script>document.write(`<a href="../../" id="nav-home" data-i18n="navHome">-</a>`);</script>
+        <script>document.write(`<a href="../../" id="nav-home" data-i18n="nav.home">-</a>`);</script>
         <span class="separator">/</span>
         <span class="current-page" id="nav-current" data-i18n="navCurrent">-</span>
     </div>
