--- a/_includes/tier-position-body.html
+++ b/_includes/tier-position-body.html
@@ -104,7 +104,7 @@ window.__TIER_PAGE_MODE__ = {{ page.tier_mode | default: '' | jsonify }};
 
     <!-- Navigation path -->
     <div class="navigation-path">
-        <script>document.write(`<a href="{{ site.baseurl }}/" id="nav-home" data-i18n="navHome">-</a>`);</script>
+        <script>document.write(`<a href="{{ site.baseurl }}/" id="nav-home" data-i18n="nav.home">-</a>`);</script>
         <span class="separator">/</span>
         <span class="current-page" id="nav-current" data-i18n="navCurrent">-</span>
     </div>
