--- a/_includes/wonder-weapon-body.html
+++ b/_includes/wonder-weapon-body.html
@@ -27,7 +27,7 @@
   </div>-->
 
   <div class="navigation-path">
-    <script>document.write(`<a href="../../" id="nav-home" data-i18n="navHome">-</a>`);</script>
+    <script>document.write(`<a href="../../" id="nav-home" data-i18n="nav.home">-</a>`);</script>
     <span class="separator">/</span>
     <span class="current-page" id="nav-current" data-i18n="navCurrent">-</span>
   </div>
