--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -189,6 +189,9 @@
     {% if site.data.character_slugs %}
     window.__CHARACTER_SLUG_MAP = {{ site.data.character_slugs | jsonify }};
     {% endif %}
+    {% if site.data.wonder_weapon_slugs %}
+    window.__WONDER_WEAPON_SLUG_MAP = {{ site.data.wonder_weapon_slugs | jsonify }};
+    {% endif %}
 
     // 기본 CSS 및 JS 파일 로드
     document.write('<link rel="stylesheet" href="{{ site.baseurl }}/assets/css/default/common.css?v=' + APP_VERSION + '">');
